2001-01-25  Michael Engber  <engber@eazel.com>

	reviewed by: John Harper

	* libnautilus-extensions/nautilus-background.c:
	(nautilus_background_draw_pixbuf_free), (nautilus_background_draw):
	Background are now always drawn with the aa code, ensuring
	their gradients are never striated - bug 5584.

2001-01-25  Josh Barrow  <josh@eazel.com>

	* icons/theme_preview.png:
	Updated for the new k-rad look of the default theme.

2001-01-25  John Sullivan  <sullivan@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Fixed bug 5506 (Show Properties always shows full path,
	making window ludicrously wide)

	Also made some other contents of the properties
	window handle window-stretching more attractively.

	* libnautilus-extensions/nautilus-ellipsizing-label.h:
	* libnautilus-extensions/nautilus-ellipsizing-label.c:
	(nautilus_ellipsizing_label_initialize_class),
	(nautilus_ellipsizing_label_initialize), (real_destroy),
	(nautilus_ellipsizing_label_new), (recompute_ellipsized_text),
	(nautilus_ellipsizing_label_set_text), (real_size_request),
	(real_size_allocate), (real_style_set): New files. This is
	a subclass of GtkLabel that requests no specific width, and
	ellipsizes the text to fit whatever width it is given.

	* libnautilus-extensions/Makefile.am: Add new files to build.

	* src/file-manager/fm-properties-window.c:
	(value_field_update_internal): New function, contains code
	formerly in value_field_update but takes boolean to handle
	ellipsized case.
	(value_field_update): Now just a simple wrapper for
	value_field_update_internal for the non-ellipsized case.
	(ellipsizing_value_field_update): New function, simple wrapper
	for value_field_update_internal for the ellipsized case.
	(attach_label): added an ellipsize_text boolean to this
	bottleneck function.
	(attach_value_label), (attach_title_field): pass FALSE for 
	ellipsize_text to attach_label
	(attach_ellipsizing_value_label): new function, pass TRUE for
	ellipsize_text to attach_label